pom for Lambda tests with two executions