@@ -13,20 +13,40 @@
 	<artifactId>it.xsemantics.example.lambda.tests</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>eclipse-test-plugin</packaging>
-	
+
 	<build>
-    <plugins>
-      <plugin>
-        <groupId>org.eclipse.tycho</groupId>
-        <artifactId>tycho-surefire-plugin</artifactId>
-        <version>${tycho-version}</version>
-        <configuration>
-          <testSuite>it.xsemantics.example.lambda.tests</testSuite>
-          <testClass>it.xsemantics.example.lambda.tests.LambdaAllTests</testClass>
-          <useUIHarness>false</useUIHarness>
-          <useUIThread>false</useUIThread>
-        </configuration>
-      </plugin>
-     </plugins>
-    </build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-surefire-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<executions>
+					<execution>
+						<id>Headless-tests</id>
+						<configuration>
+							<testSuite>it.xsemantics.example.lambda.tests</testSuite>
+							<testClass>it.xsemantics.example.lambda.tests.LambdaAllTests</testClass>
+							<useUIHarness>false</useUIHarness>
+							<useUIThread>false</useUIThread>
+						</configuration>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>UITests</id>
+						<configuration>
+							<testSuite>it.xsemantics.example.lambda.tests</testSuite>
+							<testClass>it.xsemantics.example.lambda.tests.ui.LambdaAllUiTests</testClass>
+							<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+							<useUIHarness>true</useUIHarness>
+						</configuration>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
